# 3DSMC_Project

./: README.md  requirements.txt
ArUco_Cube/: .gitignore  ArUco_Cube.pyproject  CustomVideoWidget.py  QeA.py  Questions.json  Questions.py  calibration.py  camera.py  camera.ui  imagesettings.py  main.py  metadatadialog.py  requirements.txt  ui_camera.py  ui_imagesettings.py  ui_videosettings.py  videosettings.py
examples_opencv/TP1/tp1ogl-v2023.1.0-rc1/: CMakeLists.txt  README.md  helloteapot.cpp  helloteapot2.cpp  moreteapots.cpp  navigator.cpp
examples_opencv/TP3/: .clang-format  CMakeLists.txt  README.md  robot.cpp
examples_opencv/TP5/: BUILD.md  CMakeLists.txt
examples_opencv/TP5/src/: MeshModel.cpp  MeshModel.hpp  core.cpp  core.hpp  geometry.cpp  geometry.hpp  loop.cpp  loop.hpp  main.cpp  objReader.cpp  objReader.hpp  openglAll.hpp  rendering.cpp  rendering.hpp
examples_opencv/TP5/src/tests/: test_core.cpp  test_geometry.cpp  test_objReader.cpp
test/: CMakeLists.txt  main.cpp
