cmake_minimum_required(VERSION 3.10)
project(tp1 VERSION 2023.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 11)

# set(OpenGL_GL_PREFERENCE "GLVND")
find_package(OpenGL REQUIRED)
message(STATUS "OPENGL_gl_LIBRARY: ${OPENGL_gl_LIBRARY}")

if(MSVC)
    set(GLUT_ROOT_PATH "${CMAKE_SOURCE_DIR}/freeglut")
    message(STATUS "GLUT_ROOT_PATH: ${GLUT_ROOT_PATH}")
endif()
find_package(GLUT REQUIRED)
message(STATUS "GLUT_FOUND: ${GLUT_FOUND}")
message(STATUS "GLUT_INCLUDE_DIR: ${GLUT_INCLUDE_DIR}")
message(STATUS "GLUT_LIBRARIES: ${GLUT_LIBRARIES}")

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    set(MY_COMPILE_OPTIONS "-Wall;-Wextra;-pedantic;-Wno-comment;-Wshadow;-Wnon-virtual-dtor;-Wpedantic;-Wconversion;-Wmisleading-indentation;-Wsign-conversion")
elseif(MSVC)
    set(MY_COMPILE_OPTIONS "/W4;/permissive-")
endif()
if(APPLE)
    list(APPEND MY_COMPILE_OPTIONS "-Wno-deprecated-declarations")
endif()

add_executable(helloteapot helloteapot.cpp)
target_include_directories(helloteapot PUBLIC ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR})
#target_link_libraries(helloteapot PUBLIC ${OPENGL_opengl_LIBRARY} ${OPENGL_glu_LIBRARY} ${GLUT_LIBRARIES})
target_link_libraries(helloteapot PUBLIC OpenGL::GL OpenGL::GLU ${GLUT_LIBRARIES})
target_compile_options(helloteapot PRIVATE ${MY_COMPILE_OPTIONS})
if(MSVC)
    target_compile_definitions(helloteapot PUBLIC -DNOMINMAX)
endif()

# Uncomment the following lines (remove the #) to add the helloteapot2.cpp to the build system
add_executable(helloteapot2 helloteapot2.cpp)
target_include_directories(helloteapot2 PUBLIC ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR})
# target_link_libraries(helloteapot2 PUBLIC ${OPENGL_opengl_LIBRARY} ${OPENGL_glu_LIBRARY} ${GLUT_LIBRARIES})
target_link_libraries(helloteapot2 PUBLIC OpenGL::GL OpenGL::GLU ${GLUT_LIBRARIES})

add_executable(moreteapots moreteapots.cpp)
target_include_directories(moreteapots PUBLIC ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR})
#target_link_libraries(moreteapots PUBLIC ${OPENGL_opengl_LIBRARY} ${OPENGL_glu_LIBRARY} ${GLUT_LIBRARIES})
target_link_libraries(moreteapots PUBLIC OpenGL::GL OpenGL::GLU ${GLUT_LIBRARIES})
target_compile_options(moreteapots PRIVATE ${MY_COMPILE_OPTIONS})
if(MSVC)
    target_compile_definitions(moreteapots PUBLIC -DNOMINMAX)
endif()

# Uncomment the following lines (remove the #) to add the navigator to the build system (after having added the navigator.cpp)
 add_executable(navigator navigator.cpp)
target_include_directories(navigator PUBLIC ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR})
# target_link_libraries(navigator PUBLIC ${OPENGL_opengl_LIBRARY} ${OPENGL_glu_LIBRARY} ${GLUT_LIBRARIES})
target_link_libraries(navigator PUBLIC OpenGL::GL OpenGL::GLU ${GLUT_LIBRARIES})
target_compile_options(navigator PRIVATE ${MY_COMPILE_OPTIONS})
if(MSVC)
   target_compile_definitions(navigator PUBLIC -DNOMINMAX)
endif()